--- a/db/templates/create_recipe.html
+++ b/db/templates/create_recipe.html
@@ -25,10 +25,10 @@
         <label for="dietary_information" class="form-label">Dietary Information</label>
         <input type="text" class="form-control" id="dietary_information" name="dietary_information" required>
       </div>
-      <!-- <div class="mb-3">
+      <div class="mb-3">
         <label for="category_id" class="form-label">Category ID</label>
         <input type="number" class="form-control" id="category_id" name="category_id" required>
-      </div> -->
+      </div>
       <button type="submit" class="btn btn-primary">Create</button>
     </form>
   </div>
